force-app/main/default/objects/Project__c/fields/Business_Designation__c.field-meta.xml
<CustomField>
    <fullName>Business_Designation__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DTC Main</fullName>
            </value>
            <value>
                <fullName>DTC Professional Services</fullName>
            </value>
            <value>
                <fullName>T4NG Professional Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>