force-app/main/default/objects/Project__c/fields/Business_Unit_Leader__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Leader__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Unit Leader</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects (Business Unit Leader)</relationshipLabel>
    <relationshipName>Projects2</relationshipName>
    <type>Lookup</type>
</CustomField>