force-app/main/default/objects/Project__c/fields/CLIN__c.field-meta.xml
<CustomField>
    <fullName>CLIN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CLIN</label>
    <referenceTo>CLIN__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>