force-app/main/default/objects/Project__c/fields/Contract_Category__c.field-meta.xml
<CustomField>
    <fullName>Contract_Category__c</fullName>
    <label>Contract</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contract_Main</valueSetName>
    </valueSet>
</CustomField>