force-app/main/default/objects/Project__c/fields/External_System_Code__c.field-meta.xml
<CustomField>
    <fullName>External_System_Code__c</fullName>
    <label>External System Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>