force-app/main/default/objects/Project__c/fields/Funded_Value__c.field-meta.xml
<CustomField>
    <fullName>Funded_Value__c</fullName>
    <label>Funded Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>