force-app/main/default/objects/Project__c/fields/GFE_Required__c.field-meta.xml
<CustomField>
    <fullName>GFE_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GFE Required</label>
    <type>Checkbox</type>
</CustomField>