force-app/main/default/objects/Project__c/fields/PM__c.field-meta.xml
<CustomField>
    <fullName>PM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PM</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>