force-app/main/default/objects/Project__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <inlineHelpText>Starts with 1.5.M.MB0.7032.</inlineHelpText>
    <label>Unanet Project Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>