force-app/main/default/objects/Project__c/fields/Project_Code_Long__c.field-meta.xml
<CustomField>
    <fullName>Project_Code_Long__c</fullName>
    <inlineHelpText>The Full Unanet code for the project</inlineHelpText>
    <label>Unanet Project Code - Long</label>
    <length>255</length>
    <type>Text</type>
</CustomField>