force-app/main/default/objects/Project__c/fields/Project_Owning_Organization__c.field-meta.xml
<CustomField>
    <fullName>Project_Owning_Organization__c</fullName>
    <defaultValue>&quot;1.03.05.10.01&quot;</defaultValue>
    <label>Unanet Project Owning Organization</label>
    <length>25</length>
    <type>Text</type>
</CustomField>