force-app/main/default/objects/Project__c/fields/Unanet_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Unanet_Project_Code__c</fullName>
    <description>Unanet Project Code</description>
    <label>Unanet Project Code DNU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>