force-app/main/default/objects/Project__c/fields/Unanet_Project_Organization__c.field-meta.xml
<CustomField>
    <fullName>Unanet_Project_Organization__c</fullName>
    <defaultValue>&quot;3.05.10.01.009&quot;</defaultValue>
    <label>Unanet Project Organization</label>
    <length>25</length>
    <type>Text</type>
</CustomField>